--- a/src/index.css
+++ b/src/index.css
@@ -38,12 +38,12 @@ header {
 
 .photos {
     display: grid;
-    grid-gap: 2px;
+    grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-auto-rows: 300px;
     grid-auto-flow: dense;
     padding: 10px;
-    margin: 50px;
+    margin: 50px 100px 50px 100px;
 }
 
 
@@ -65,7 +65,7 @@ header {
 
 .grid-image {
     position: relative;
-    grid-column: span 2;
+    grid-column: span 3;
 }
 
 .heart {
