--- a/src/index.css
+++ b/src/index.css
@@ -162,8 +162,9 @@ button:active {
 
 .product-page-container {
     display: grid;
-    grid-template-columns: 65% 35%;
-    grid-template-rows: 400px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: 400px;
+    grid-auto-flow: dense;
     margin: auto;
     margin-top: 100px;
     padding: 100px;
@@ -176,5 +177,9 @@ button:active {
 
 .product-info button {
     margin-top: 30px;
+}
+
+.product-info {
+    padding: 50px;
 }
 
