--- a/src/index.css
+++ b/src/index.css
@@ -166,17 +166,22 @@ button:active {
     grid-auto-rows: 400px;
     grid-auto-flow: dense;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 50px;
     padding: 100px;
 }
 
-.product-info h2, h4 {
+.product-info * {
     color: var(--black);
+    
+}
+
+.product-info h4{
     padding-top: 30px; 
 }
 
 .product-info button {
     margin-top: 30px;
+    color: var(--white)
 }
 
 .product-info {
